fix aos overflow error on youtube and about section

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -303,6 +303,7 @@ header {
 #about {
   background: #fff3e4;
   padding: 9rem 0;
+  overflow-x: hidden;
   .about {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -481,6 +482,7 @@ header {
 #youtube {
   background: #fff3e4;
   padding: 4rem 0;
+  overflow-x: hidden;
   .youtube {
     display: grid;
     // grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
